# 2026-p7-yuyosa

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
todo/: sqs.tf
todo/tasks/: ical.py
todo/views/: routes.py
